{
  "browse": "بازار",
  "categories": "ډلې",
  "saved": "خوندي شوي",
  "chat": "چټونه",
  "profile": "زه",
  "myListings": "زما هټۍ",
  "createListing": "نوی اعلان",
  "sellerDashboard": "د پلورونکي ډشبورډ"
}