{
  "title": "پروفایل",
  "editProfile": "پروفایل سمول",
  "myListings": "زما اعلانونه",
  "savedListings": "خوندي اعلانونه",
  "switchToBuyer": "د اخیستونکي حالت ته لاړ شئ",
  "switchToSeller": "د پلورونکي حالت ته لاړ شئ",
  "buyerMode": "د اخیستونکي حالت",
  "sellerMode": "د پلورونکي حالت",
  "language": "ژبه",
  "theme": "ښکارندوی",
  "themeLight": "رڼا",
...
